--- a/Onliner for windows 10/Onliner for windows 10/Views/Profile/SearchUserPage.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/Profile/SearchUserPage.xaml
@@ -5,6 +5,7 @@
     xmlns:local="using:Onliner_for_windows_10.Views.Profile"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:controls="using:Template10.Controls"
     mc:Ignorable="d">
 
     <Page.Resources>
@@ -38,36 +39,46 @@
             </Border>
         </DataTemplate>
     </Page.Resources>
-    
-    <Grid Background="{ThemeResource BackGroundCustomColorBrush}">
+    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition/>
         </Grid.RowDefinitions>
-        <AutoSuggestBox Name="AutoSuggestBox" 
-                        Header="Пользователи"
+        <controls:PageHeader Text="Найти пользователя" FontWeight="Bold"
+                             Frame="{x:Bind Frame}"
+                             Background="{ThemeResource BackGroundCustomHeaderColorBrush}"
+                             Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"
+                             VisualStateNarrowMinWidth="1"
+                             BackButtonVisibility="Collapsed"/>
+        <Grid Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <AutoSuggestBox Name="AutoSuggestBox" 
                         BorderBrush="Yellow"
                         PlaceholderText="Введите никнейм пользователя.."
-                        MaxWidth="500"
+                        MaxWidth="500" Margin="10"
                         IsTapEnabled="True"
                         Foreground="{ThemeResource ForegroundCustomBlackBrush}"
                         KeyUp="AutoSuggestBox_KeyUp"/>
-        <TextBlock Name="PageCountTextBox"  Grid.Row="1" Visibility="Collapsed"/>
-        <ListView Name="ListviewUserResult"
+            <TextBlock Name="PageCountTextBox"  Grid.Row="1" Visibility="Collapsed"/>
+            <ListView Name="ListviewUserResult"
                   Grid.Row="2" 
                   Margin="0,6,0,0"
                   HorizontalAlignment="Stretch" 
                   MaxWidth="500"
                   ItemTemplate="{StaticResource UsersListviewItem}" 
                   SelectionChanged="ListviewUserResult_SelectionChanged">
-            <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                    <Setter Property="Margin" Value="0"/>
-                </Style>
-            </ListView.ItemContainerStyle>
-           
-        </ListView>
+                <ListView.ItemContainerStyle>
+                    <Style TargetType="ListViewItem">
+                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                        <Setter Property="Margin" Value="0"/>
+                    </Style>
+                </ListView.ItemContainerStyle>
+
+            </ListView>
+        </Grid>
     </Grid>
 </Page>
