--- a/Onliner for windows 10/Onliner for windows 10/Views/Shell.xaml
+++ b/Onliner for windows 10/Onliner for windows 10/Views/Shell.xaml
@@ -1,45 +1,48 @@
 ﻿<Page
     x:Class="Onliner_for_windows_10.Views.Shell"
+    x:Name="ShellView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:Onliner_for_windows_10"
     xmlns:local2="using:Onliner_for_windows_10.Views"
+    xmlns:VM="using:Onliner_for_windows_10.View_Model"
     xmlns:MessagePage="using:Onliner_for_windows_10.Model.Message"
     xmlns:SettingPage="using:Onliner_for_windows_10.Views.Setting"
+    xmlns:ProfilePage="using:Onliner_for_windows_10.ProfilePage"
     xmlns:UserControl="using:Onliner_for_windows_10.UserControls"
     xmlns:Core="using:Microsoft.Xaml.Interactions.Core"
     xmlns:Interactivity="using:Microsoft.Xaml.Interactivity"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:converter="using:Onliner_for_windows_10.Converters"
-    xmlns:controls="using:Template10.Controls"
+    xmlns:controls="using:Template10.Controls"  
     mc:Ignorable="d">
     <Page.Resources>
         <converter:UpdateLogoImage x:Key="UpdateImage"/>
     </Page.Resources>
-    <!--Main navigation control-->
+
     <controls:HamburgerMenu x:Name="MyHamburgerMenu"
-                    PaneWidth="200"
-                    HamburgerForeground="Black"
-                    NavAreaBackground="Yellow"
-                    NavButtonBackground="Yellow"
-                    HamburgerBackground="Yellow"
-                    SecondarySeparator="Black"
-                    NavButtonForeground="Black"
+                    PaneWidth="260"
+                    HamburgerForeground="{ThemeResource ForegroundCustomOtherBlackBrush}"
+                    NavAreaBackground="{ThemeResource BackGroundCustomHeaderColorBrush}"
+                    NavButtonBackground="{ThemeResource BackGroundCustomHeaderColorBrush}"
+                    HamburgerBackground="{ThemeResource BackGroundCustomHeaderColorBrush}"
+                    SecondarySeparator="{ThemeResource ForegroundCustomBlackBrush}"
+                    NavButtonForeground="{ThemeResource ForegroundCustomOtherBlackBrush}"
                     NavButtonCheckedBackground="Orange"
                     NavButtonCheckedForeground="White"
                     VisualStateNarrowMinWidth="0"
                     VisualStateNormalMinWidth="800">
         <controls:HamburgerMenu.PrimaryButtons>
             <!--  Profile page  -->
-            <controls:HamburgerButtonInfo x:Name="Test">
-                <StackPanel Orientation="Horizontal" VerticalAlignment="Center" BorderBrush="LightGray" BorderThickness="0,1,0,0">
-                    <Ellipse Width="30" Height="30"  Margin="10,8,0,0" VerticalAlignment="Center">
+            <controls:HamburgerButtonInfo x:Name="Test" PageType="ProfilePage:ProfilePage">
+                <StackPanel Name="ProfileStackpanel" Orientation="Horizontal" VerticalAlignment="Center" BorderBrush="LightGray">
+                    <Ellipse Width="30" Height="30"  Margin="10,5,0,0" VerticalAlignment="Center">
                         <Ellipse.Fill>
                             <ImageBrush x:Name="ImageS" ImageSource="{Binding AvatarUrl}" />
                         </Ellipse.Fill>
                     </Ellipse>
-                    <StackPanel Margin="20,10,0,0" VerticalAlignment="Center">
+                    <StackPanel Margin="20,5,0,0" VerticalAlignment="Center">
                         <TextBlock x:Name="Login" VerticalAlignment="Center" Text="{Binding Login}" />
                         <TextBlock Text="online" Foreground="Gray" FontSize="12"/>
                     </StackPanel>
@@ -53,67 +56,81 @@
                 </StackPanel>
             </controls:HamburgerButtonInfo>
             <!--  Catalog page  -->
-            <controls:HamburgerButtonInfo ClearHistory="True" PageType="local2:WeatherPage">
+            <controls:HamburgerButtonInfo PageType="local2:WeatherPage">
                 <StackPanel Orientation="Horizontal">
                     <SymbolIcon Width="48" Height="48" Symbol="Shop" />
-                    <TextBlock Margin="12,0,0,0" VerticalAlignment="Center" Text="каталог" />
+                    <Grid Margin="12,0,0,0" VerticalAlignment="Center" Width="200">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Каталог"/>
+                        <TextBlock Text="1" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}" Margin="2" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="1"/>
+                    </Grid>
                 </StackPanel>
             </controls:HamburgerButtonInfo>
             <!--  Weather page  -->
-            <controls:HamburgerButtonInfo ClearHistory="True" PageType="local2:WeatherPage">
-                <StackPanel Orientation="Horizontal">
+            <controls:HamburgerButtonInfo PageType="local2:WeatherPage">
+                <StackPanel Name="WeatherStackpanel" Orientation="Horizontal">
                     <SymbolIcon Width="48" Height="48" Symbol="World" />
-                    <Grid Margin="12,0,0,0" VerticalAlignment="Center">
+                    <Grid Margin="12,0,0,0" VerticalAlignment="Center" Width="200">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="110"/>
-                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock Text="Погода"/>
-                        <TextBlock Text="{Binding Wheather}" Margin="2" Foreground="Black" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1"/>
-
+                        <TextBlock Margin="2" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="1">
+                       <Run Text="{Binding Weather}"/>
+                        </TextBlock>
                     </Grid>
                 </StackPanel>
             </controls:HamburgerButtonInfo>
             <!--  Message page  -->
-            <controls:HamburgerButtonInfo ClearHistory="True" PageType="MessagePage:MessagePage">
-                <StackPanel Orientation="Horizontal">
-                    <SymbolIcon Width="48" Height="48" Symbol="Mail" />
-                    <Grid Margin="12,0,0,0" VerticalAlignment="Center">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="110"/>
-                            <ColumnDefinition Width="Auto"/>
-                        </Grid.ColumnDefinitions>
-                        <TextBlock Text="Сообщения"/>
-                        <TextBlock Text="{Binding UnreadeMessage}" Margin="2" Foreground="Black" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1"/>
-                    </Grid>
-                </StackPanel>
+            <controls:HamburgerButtonInfo PageType="MessagePage:MessagePage">
+                <controls:HamburgerButtonInfo.Content>
+                    <StackPanel Name="MessageStackpanel" Orientation="Horizontal">
+                        <SymbolIcon Width="48" Height="48" Symbol="Mail" />
+                        <Grid Margin="12,0,0,0" VerticalAlignment="Center" Width="200">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="auto"/>
+                                <ColumnDefinition Width="*"/>
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Text="Сообщения" Grid.Column="0"/>
+                            <TextBlock Text="{Binding Message}" Margin="2" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="1">
+                            </TextBlock>
+                        </Grid>
+                    </StackPanel>
+                </controls:HamburgerButtonInfo.Content>
             </controls:HamburgerButtonInfo>
             <!--  Current page  -->
-            <controls:HamburgerButtonInfo ClearHistory="True">
-                <StackPanel Orientation="Horizontal">
+            <controls:HamburgerButtonInfo x:Name="CurrentButton" PageType="local:MainPage">
+                <StackPanel Name="CurrentStackpanel" Orientation="Horizontal">
                     <SymbolIcon Width="48" Height="48" Symbol="Tag" />
-                    <Grid Margin="12,0,0,0" VerticalAlignment="Center">
+                    <Grid Margin="12,0,0,0" VerticalAlignment="Center" Width="200">
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="120"/>
-                            <ColumnDefinition Width="Auto"/>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="*"/>
                         </Grid.ColumnDefinitions>
                         <TextBlock Text="Курсы валют"/>
-                        <TextBlock Text="{Binding Current}" Margin="2" Foreground="Black" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Column="1"/>
+                        <TextBlock Text="{Binding Current}" Margin="2" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}" VerticalAlignment="Center" HorizontalAlignment="Right" Grid.Column="1">
+                            <TextBlock.DataContext>
+                                <VM:ShellViewModel/>
+                            </TextBlock.DataContext>
+                        </TextBlock>
                     </Grid>
                 </StackPanel>
             </controls:HamburgerButtonInfo>
             <!--  Test page  -->
-            <controls:HamburgerButtonInfo ClearHistory="True" PageType="local:testpage">
+            <controls:HamburgerButtonInfo PageType="local:testpage">
                 <StackPanel Orientation="Horizontal">
                     <SymbolIcon Width="48" Height="48" Symbol="Page" />
-                    <TextBlock Margin="12,0,0,0" VerticalAlignment="Center" Text="тест" />
+                    <TextBlock Margin="12,0,0,0" VerticalAlignment="Center" Text="тест" Foreground="{ThemeResource ForegroundCustomOtherBlackBrush}"/>
                 </StackPanel>
             </controls:HamburgerButtonInfo>
         </controls:HamburgerMenu.PrimaryButtons>
-
         <controls:HamburgerMenu.SecondaryButtons>
             <!--  Setting page  -->
-            <controls:HamburgerButtonInfo x:Name="SettingsButton" PageParameter="0" PageType="SettingPage:SettingPage">
+            <controls:HamburgerButtonInfo x:Name="SettingsButton" PageType="SettingPage:SettingPage">
                 <controls:HamburgerButtonInfo.NavigationTransitionInfo>
                     <SuppressNavigationTransitionInfo />
                 </controls:HamburgerButtonInfo.NavigationTransitionInfo>
